update controller